<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nl.tue.hti.g33.thermostat.WeekScheduleFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mon"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_mon"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Mon"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tue"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_tue"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Tue"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wed"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_wed"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Wed"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thu"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_thu"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Thu"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fri"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_fri"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Fri"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sat"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_sat"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Sat"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun"
        android:enabled="false"
        android:textColor="@color/primary_text_default_material_light" />

    <nl.tue.hti.g33.thermostat.utils.DayTimelineView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view_sun"
        android:layout_gravity="center_horizontal"
        custom:dayOfTheWeek="Sun"
        custom:colorDay="@android:color/holo_red_dark"
        custom:colorNight="@android:color/holo_blue_dark"
        custom:colorGrid="@android:color/secondary_text_light"
        custom:colorText="@android:color/primary_text_light" />
</LinearLayout>
